MVC-Con diagrama de secuencia